# ComfyUI-ZonosTTS

./: README.md  __init__.py  pyproject.toml  zonos_node.py
.github/workflows/: publish.yml
zonos/: conditioning.py  model.py
zonos/backbone/: _mamba_ssm.py  _torch.py
